crates/lutum/tests/ui/hook_def_singleton_chain.stderr
error: #[hook(singleton)] does not support 'chain', 'aggregate', 'finalize', or 'output'
 --> tests/ui/hook_def_singleton_chain.rs:3:12
  |
3 |     #[hook(singleton, chain = lutum::ShortCircuit<String, String>)]
  |            ^^^^^^^^^
